<resources>
    <string name="app_name">WanAndroid</string>
    <string name="tool_bar_title">玩Android</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="fire_hot">热门关注</string>
    <string name="search">搜索</string>
    <string name="home">首页</string>
    <string name="knowledge">知识体系</string>
    <string name="fireHot">热门关注</string>
    <string name="hot_search">大家都在搜</string>
    <string name="common_use_web_site">常用网站</string>

    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>

    <string name="account">手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="sure_password">确认密码</string>
    <string name="login">登    录</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="register_account">注册账号</string>
    <string name="other_account_login">其他账号登录</string>
    <string name="weibo">微博</string>
    <string name="we_chat">微信</string>
    <string name="github">Github</string>
    <string name="register">注    册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
