<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/article_type"
    android:orientation="vertical"
    tools:context="com.wanandroid.logic.login.view.LoginActivity">

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/back"
        android:paddingLeft="10dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_icon"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/wan_android"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="@drawable/login_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUserAccount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/account"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/b8b8b8"/>

        <EditText
            android:id="@+id/etUserPSW"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_color"/>
    </LinearLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:background="@drawable/login_button"
        android:textColor="@color/write"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvForgetPSW"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/forget_psw"
            android:gravity="center_vertical"
            android:textColor="@color/write"/>

        <TextView
            android:id="@+id/tvRegisterAccount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register_account"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:textColor="@color/write"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:background="@color/b8b8b8"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/other_account_login"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/article_type"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llWeiBo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@mipmap/weibo"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/weibo"
                android:gravity="center"
                android:textColor="@color/write"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWeChat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@mipmap/we_chat"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/we_chat"
                android:gravity="center"
                android:textColor="@color/write"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGithub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@mipmap/github"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/github"
                android:gravity="center"
                android:textColor="@color/write"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
