<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/article_type"
    tools:context="com.wanandroid.logic.register.view.RegisterActivity">

    <TextView
        android:id="@+id/tvRegisterBack"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/back"
        android:paddingLeft="10dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_icon"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/wan_android"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:background="@drawable/login_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etInputRegisterAccount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/account"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/b8b8b8"/>

        <EditText
            android:id="@+id/etInputRegisterUserPSW"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/b8b8b8"/>

        <EditText
            android:id="@+id/etSureRegisterUserPSW"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/sure_password"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_color"/>
    </LinearLayout>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:background="@drawable/login_button"
        android:textColor="@color/write"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>
